--- a/init.toml
+++ b/init.toml
@@ -1,7 +1,7 @@
 #=============================================================================
 # dark_powered.toml --- dark powered configuration example for SpaceVim
-# Copyright (c) 2016-2017 Wang Shidong & Contributors
-# Author: Wang Shidong < wsdjeg at 163.com >
+# Copyright (c) 2016-2019 dyf & Contributors
+# Author: dyf < https://blog.dyf.ink/ >
 # URL: https://spacevim.org
 # License: GPLv3
 #=============================================================================
