--- a/tmux.conf
+++ b/tmux.conf
@@ -1,22 +1,24 @@
 set -g default-terminal "screen-256color"   # use 256 colors
 
-#解除ctrl^b的绑定
+# 解除ctrl^b的绑定
 unbind-key C-b
 set-option -g prefix C-a
 
-#解除%的绑定
+# 解除%的绑定
 unbind %
 bind C-d split-window -h
 
-#解除"的绑定
+# 解除"的绑定
 unbind '"'
 bind C-w split-window -v
+
+# 允许鼠标屏幕滚动
+set -g mouse on
 
 
 set -g status-justify centre
 set -g status-left "#[fg=red]s#S:w#I.p#P#[default]"
 set -g status-right '[#(whoami)#(date +" %m-%d %H:%M ")]'
-set -g status-left-attr bright
 set -g status-left-length 120
 set -g status-right-length 120
 set -g status-interval 1
@@ -26,12 +28,7 @@ setw -g automatic-rename off
 # default statusbar colors
 set -g status-bg colour235 #base02
 set -g status-fg colour136 #yellow
-set -g status-attr default
 # default window title colors
-setw -g window-status-fg colour244
-setw -g window-status-bg default
 #setw -g window-status-attr dim
 # active window title colors
-setw -g window-status-current-fg colour166 #orange
-setw -g window-status-current-bg default
-#setw -g window-status-current-attr bright
+#setw -g window-status-current-fg colour166 #orange
